dev: Bug fixing the same as in main branch

--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -1302,6 +1302,515 @@
    "id": "6be5284f",
    "metadata": {},
    "source": [
+    "### window_check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "2678e87a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from astropy.io import fits\n",
+    "import glob\n",
+    "from matplotlib.gridspec import GridSpec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "76ec9f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def window_check(freqs:pd.DataFrame, f_col:int, amp_col:int, window_function:np.ndarray, max_n:int = 1, tol:float=0) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    This function evaluates the alias frequencies produced by the convolution of the window function and the real signal.\n",
+    "\n",
+    "    An alias is identified if:\n",
+    "\n",
+    "            |f_alias - f_real| = n·f_wf +/- tol  \n",
+    "    \n",
+    "    where f_wf are the frequencies of the window function. This function also evaluates the amplitudes compared to the \n",
+    "    \n",
+    "    offered by window function, i.e. amplitudes of peaks suspected to be aliased frequencies will be checked if their \n",
+    "    \n",
+    "    amplitudes are a factor of the window function power computed for f_wf.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "\n",
+    "    freqs: pd.DataFrame\n",
+    "        DataFrame containing (Frequencies, Amplitudes) from the sample\n",
+    "    \n",
+    "    f_col: int\n",
+    "        Index column of the frequencies\n",
+    "\n",
+    "    amp_col: int\n",
+    "        Index column of the amplitudes\n",
+    "\n",
+    "    window_function: np.ndarray\n",
+    "        Array of shape (N,2) containing (Frequencies, W(f)) from the computed window function\n",
+    "\n",
+    "    max_n: int\n",
+    "        Max integer to evaluate the spurious frequencies in the window function. Usually this value is 1, more than this value is\n",
+    "\n",
+    "        not implemented yet.\n",
+    "\n",
+    "    tol: float\n",
+    "        Tolerance or Error to consider a frequency an alias\n",
+    "\n",
+    "    Output\n",
+    "    ------\n",
+    "\n",
+    "        DataFrame with all the frequencies and an extra column indicating the combination \n",
+    "        found for an alias frequency.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 1. Finding the lowest amplitude detected in the real sample to see the lowest limit.\n",
+    "    #lowest_amp = freqs[:,1].min()\n",
+    "\n",
+    "    # 2. Sorting the dataframe per amplitude\n",
+    "    columns = freqs.columns\n",
+    "    freqs_df_sorted = freqs.sort_values(by=columns[amp_col], ascending=False, ignore_index=True)\n",
+    "    freqs_matrix = freqs.iloc[:,[f_col,amp_col]].to_numpy()\n",
+    "    freqs_sorted = freqs_matrix[np.argsort(freqs_matrix[:,1])][::-1]\n",
+    "    freqs_list = freqs_sorted[:,0].copy()\n",
+    "\n",
+    "    # 3. We first check if there are any observed frequency in the window function\n",
+    "\n",
+    "    # 3.1 Creating a initial_check_matrix\n",
+    "    window_sorted = window_function[np.argsort(window_function[:,1])][::-1]\n",
+    "    window_list = window_sorted[:,0].copy()\n",
+    "    initial_check_matrix = freqs_list[:,None] - window_list[None,:] # f_real - f_wf\n",
+    "\n",
+    "    # 3.2 Saving indexes of the observed frequencies that matched\n",
+    "    freqs_in_window_idx = np.argwhere(np.abs(initial_check_matrix) <= tol)\n",
+    "\n",
+    "    # 4. We need to compute all the possible combinations of f_real +/- n·f_wf\n",
+    "\n",
+    "    # 4.1 All n possible values (-n, -n+1,...0,...,n)\n",
+    "    n = np.arange(-max_n, max_n+1, 1)\n",
+    "    # 4.1.1 Discarding the n=0\n",
+    "    n = n[n!=0]\n",
+    "    # 4.2 Create a matrix win 2n+1 columns consisting of f_wf_i*n_j (f_wf x n)\n",
+    "    delta_matrix = np.outer(window_sorted[:,0], n)    \n",
+    "    \n",
+    "    # 5. We need to compute all the possible differences between all the frequencies\n",
+    "\n",
+    "    # 5.1 Compute a matrix of f_i-f_j with both f_i and f_j sorted by amplitude (f_real x f_real)\n",
+    "    diffs_matrix = freqs_list[:,None] - freqs_list[None,:] # Broadcasting to be able to substract\n",
+    "\n",
+    "    # 5.2 We need to compare which elements of |diffs_matrix - delta_matrix| <= tol (sólo nos quedamos con el primero)\n",
+    "    # 5.2.1 We expand dimensions to be able to substract (broadcasting)\n",
+    "    diffs_exp = diffs_matrix[:, :, None, None]       # (f_real, f_real, 1, 1)\n",
+    "    delta_exp = delta_matrix[None, None, :, :]       # (1, 1, f_wf, n)\n",
+    "\n",
+    "    # 5.2.2 We take the boolean array where the match happens\n",
+    "    matches_id = np.abs(delta_exp-diffs_exp)<=tol\n",
+    "\n",
+    "    # 5.2.3 We only select such that an alias is combination of stronger frequencies in amplitude (j<i)\n",
+    "    N = freqs_sorted.shape[0]\n",
+    "    i_idx, j_idx = np.meshgrid(np.arange(N), np.arange(N), indexing='ij')\n",
+    "    mask_hierarchy = j_idx < i_idx\n",
+    "    mask_hierarchy = mask_hierarchy[:, :, None, None]   # broadcasting\n",
+    "\n",
+    "    matches_id &= mask_hierarchy\n",
+    "\n",
+    "    # 5.2.4 Selecting the index where this happens\n",
+    "    alias_candidates_idx = np.argwhere(matches_id) # (f_real, f_real, f_wf, n)\n",
+    "\n",
+    "    # 6. Creating the output as a dataframe\n",
+    "    combinations = []\n",
+    "    labels=[]\n",
+    "    for freq_idx in range(N):\n",
+    "        # If frequency was in window function, it will have a zero in initial_check_matrix at that row\n",
+    "        if np.isin(freq_idx, freqs_in_window_idx[:,0]):\n",
+    "            # We need to take the index of the FW, which is the column index\n",
+    "            match_idx = freqs_in_window_idx[freqs_in_window_idx[:,0] == freq_idx]\n",
+    "            wf_idx = match_idx[0, 1]\n",
+    "            combinations.append(f\"FW_{wf_idx}\")\n",
+    "\n",
+    "        #If frequency is an alias due to the window function\n",
+    "        elif np.isin(freq_idx, alias_candidates_idx[:,0]):\n",
+    "            matches = alias_candidates_idx[alias_candidates_idx[:,0] == freq_idx]\n",
+    "            main_f_idx = matches[0,1]\n",
+    "            wf_idx = matches[0,2]\n",
+    "            sign = \"+\" if matches[0,3] == 1 else \"-\"\n",
+    "            combinations.append(f\"F{main_f_idx+1}{sign}FW{wf_idx}\")\n",
+    "\n",
+    "        #Real freq\n",
+    "        else:\n",
+    "            combinations.append(np.nan)\n",
+    "\n",
+    "        labels.append(f\"F{freq_idx+1}\")\n",
+    "\n",
+    "    # 7. Updating the DataFrame\n",
+    "    freqs_df_sorted['Combinations'] = combinations\n",
+    "    if 'ID' not in freqs_df_sorted.columns:\n",
+    "        freqs_df_sorted.insert(loc=0, column='ID', value=labels)\n",
+    "\n",
+    "\n",
+    "    return freqs_df_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "548785fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freqs_matrix = np.array([np.arange(1,4,0.2), np.linspace(8, 2, 15)]).transpose()\n",
+    "window_function = np.array(\n",
+    "    [[1,2, 0.5],\n",
+    "    [4,3,5]]\n",
+    ").transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "2e72c924",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.2</td>\n",
+       "      <td>7.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.4</td>\n",
+       "      <td>7.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.6</td>\n",
+       "      <td>6.714286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.8</td>\n",
+       "      <td>6.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2.2</td>\n",
+       "      <td>5.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2.4</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.714286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>3.2</td>\n",
+       "      <td>3.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3.4</td>\n",
+       "      <td>2.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Freqs      Amps\n",
+       "0     1.0  8.000000\n",
+       "1     1.2  7.571429\n",
+       "2     1.4  7.142857\n",
+       "3     1.6  6.714286\n",
+       "4     1.8  6.285714\n",
+       "5     2.0  5.857143\n",
+       "6     2.2  5.428571\n",
+       "7     2.4  5.000000\n",
+       "8     2.6  4.571429\n",
+       "9     2.8  4.142857\n",
+       "10    3.0  3.714286\n",
+       "11    3.2  3.285714\n",
+       "12    3.4  2.857143\n",
+       "13    3.6  2.428571\n",
+       "14    3.8  2.000000"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqs_df = pd.DataFrame(freqs_matrix, columns=[\"Freqs\", \"Amps\"])\n",
+    "freqs_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "ad240a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 4. ],\n",
+       "       [2. , 3. ],\n",
+       "       [0.5, 5. ]])"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "window_function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "7e2e1124",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "      <th>Combinations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>FW_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F2</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>7.571429</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>F3</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>7.142857</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>F4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>6.714286</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>F5</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>6.285714</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>F6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.857143</td>\n",
+       "      <td>FW_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>F7</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>5.428571</td>\n",
+       "      <td>F2+FW1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>F8</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>F3+FW1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>F9</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.571429</td>\n",
+       "      <td>F4+FW1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>F10</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.142857</td>\n",
+       "      <td>F5+FW1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>F11</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.714286</td>\n",
+       "      <td>F1+FW2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>F12</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>3.285714</td>\n",
+       "      <td>F2+FW2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>F13</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>2.857143</td>\n",
+       "      <td>F3+FW2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>F14</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2.428571</td>\n",
+       "      <td>F4+FW2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>F15</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>F5+FW2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ID  Freqs      Amps Combinations\n",
+       "0    F1    1.0  8.000000         FW_1\n",
+       "1    F2    1.2  7.571429          NaN\n",
+       "2    F3    1.4  7.142857          NaN\n",
+       "3    F4    1.6  6.714286          NaN\n",
+       "4    F5    1.8  6.285714          NaN\n",
+       "5    F6    2.0  5.857143         FW_2\n",
+       "6    F7    2.2  5.428571       F2+FW1\n",
+       "7    F8    2.4  5.000000       F3+FW1\n",
+       "8    F9    2.6  4.571429       F4+FW1\n",
+       "9   F10    2.8  4.142857       F5+FW1\n",
+       "10  F11    3.0  3.714286       F1+FW2\n",
+       "11  F12    3.2  3.285714       F2+FW2\n",
+       "12  F13    3.4  2.857143       F3+FW2\n",
+       "13  F14    3.6  2.428571       F4+FW2\n",
+       "14  F15    3.8  2.000000       F5+FW2"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "window_check(freqs=freqs_df, f_col=0, amp_col=1, window_function=window_function, max_n=1, tol=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a63c8a",
+   "metadata": {},
+   "source": [
     "### Other Function"
    ]
   }
