dev: freq_analysis - Implementing amplitude check in window_check

--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 272,
    "id": "76ec9f8a",
    "metadata": {},
    "outputs": [],
@@ -1371,14 +1371,14 @@
     "        found for an alias frequency.\n",
     "    \"\"\"\n",
     "\n",
-    "    # 1. Finding the lowest amplitude detected in the real sample to see the lowest limit.\n",
-    "    #lowest_amp = freqs[:,1].min()\n",
-    "\n",
-    "    # 2. Sorting the dataframe per amplitude\n",
+    "    # 1. Sorting the dataframe per amplitude\n",
     "    columns = freqs.columns\n",
     "    freqs_df_sorted = freqs.sort_values(by=columns[amp_col], ascending=False, ignore_index=True)\n",
     "    freqs_matrix = freqs.iloc[:,[f_col,amp_col]].to_numpy()\n",
+    "\n",
+    "    # 2. Finding the lowest amplitude detected in the real sample to see the lowest limit.\n",
     "    freqs_sorted = freqs_matrix[np.argsort(freqs_matrix[:,1])][::-1]\n",
+    "    lowest_amp = freqs_sorted[:,1].min()\n",
     "    freqs_list = freqs_sorted[:,0].copy()\n",
     "\n",
     "    # 3. We first check if there are any observed frequency in the window function\n",
@@ -1427,6 +1427,7 @@
     "    # 6. Creating the output as a dataframe\n",
     "    combinations = []\n",
     "    labels=[]\n",
+    "    teo_amp=[]\n",
     "    for freq_idx in range(N):\n",
     "        # If frequency was in window function, it will have a zero in initial_check_matrix at that row\n",
     "        if np.isin(freq_idx, freqs_in_window_idx[:,0]):\n",
@@ -1434,23 +1435,33 @@
     "            match_idx = freqs_in_window_idx[freqs_in_window_idx[:,0] == freq_idx]\n",
     "            wf_idx = match_idx[0, 1]\n",
     "            combinations.append(f\"FW_{wf_idx}\")\n",
+    "            teo_amp.append(np.nan)\n",
     "\n",
     "        #If frequency is an alias due to the window function\n",
     "        elif np.isin(freq_idx, alias_candidates_idx[:,0]):\n",
     "            matches = alias_candidates_idx[alias_candidates_idx[:,0] == freq_idx]\n",
     "            main_f_idx = matches[0,1]\n",
     "            wf_idx = matches[0,2]\n",
-    "            sign = \"+\" if matches[0,3] == 1 else \"-\"\n",
-    "            combinations.append(f\"F{main_f_idx+1}{sign}FW{wf_idx}\")\n",
+    "            amp_wf = window_sorted[wf_idx][1]\n",
+    "            amp_f = freqs_sorted[main_f_idx][1]\n",
+    "            if amp_f*amp_wf>lowest_amp:\n",
+    "                sign = \"+\" if matches[0,3] == 1 else \"-\"\n",
+    "                combinations.append(f\"F{main_f_idx+1}{sign}FW{wf_idx}\")\n",
+    "                teo_amp.append(amp_f*amp_wf)\n",
+    "            else:\n",
+    "                combinations.append(np.nan)\n",
+    "                teo_amp.append(np.nan)                \n",
     "\n",
     "        #Real freq\n",
     "        else:\n",
     "            combinations.append(np.nan)\n",
+    "            teo_amp.append(np.nan)\n",
     "\n",
     "        labels.append(f\"F{freq_idx+1}\")\n",
     "\n",
     "    # 7. Updating the DataFrame\n",
     "    freqs_df_sorted['Combinations'] = combinations\n",
+    "    freqs_df_sorted['Theoretical Alias_Amp'] = teo_amp\n",
     "    if 'ID' not in freqs_df_sorted.columns:\n",
     "        freqs_df_sorted.insert(loc=0, column='ID', value=labels)\n",
     "\n",
@@ -1460,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 273,
    "id": "548785fa",
    "metadata": {},
    "outputs": [],
@@ -1468,13 +1479,13 @@
     "freqs_matrix = np.array([np.arange(1,4,0.2), np.linspace(8, 2, 15)]).transpose()\n",
     "window_function = np.array(\n",
     "    [[1,2, 0.5],\n",
-    "    [4,3,5]]\n",
+    "    [0.4,0.3,0.5]]\n",
     ").transpose()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 274,
    "id": "2e72c924",
    "metadata": {},
    "outputs": [
@@ -1602,7 +1613,7 @@
        "14    3.8  2.000000"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,19 +1625,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 275,
    "id": "ad240a95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1. , 4. ],\n",
-       "       [2. , 3. ],\n",
-       "       [0.5, 5. ]])"
+       "array([[1. , 0.4],\n",
+       "       [2. , 0.3],\n",
+       "       [0.5, 0.5]])"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 276,
    "id": "7e2e1124",
    "metadata": {},
    "outputs": [
@@ -1666,6 +1677,7 @@
        "      <th>Freqs</th>\n",
        "      <th>Amps</th>\n",
        "      <th>Combinations</th>\n",
+       "      <th>Theoretical Alias_Amp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1675,12 +1687,14 @@
        "      <td>1.0</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>FW_1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>F2</td>\n",
        "      <td>1.2</td>\n",
        "      <td>7.571429</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1689,12 +1703,14 @@
        "      <td>1.4</td>\n",
        "      <td>7.142857</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>F4</td>\n",
        "      <td>1.6</td>\n",
        "      <td>6.714286</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1703,6 +1719,7 @@
        "      <td>1.8</td>\n",
        "      <td>6.285714</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1710,6 +1727,7 @@
        "      <td>2.0</td>\n",
        "      <td>5.857143</td>\n",
        "      <td>FW_2</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1717,6 +1735,7 @@
        "      <td>2.2</td>\n",
        "      <td>5.428571</td>\n",
        "      <td>F2+FW1</td>\n",
+       "      <td>3.028571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1724,6 +1743,7 @@
        "      <td>2.4</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>F3+FW1</td>\n",
+       "      <td>2.857143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1731,6 +1751,7 @@
        "      <td>2.6</td>\n",
        "      <td>4.571429</td>\n",
        "      <td>F4+FW1</td>\n",
+       "      <td>2.685714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1738,6 +1759,7 @@
        "      <td>2.8</td>\n",
        "      <td>4.142857</td>\n",
        "      <td>F5+FW1</td>\n",
+       "      <td>2.514286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -1745,6 +1767,7 @@
        "      <td>3.0</td>\n",
        "      <td>3.714286</td>\n",
        "      <td>F1+FW2</td>\n",
+       "      <td>2.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -1752,6 +1775,7 @@
        "      <td>3.2</td>\n",
        "      <td>3.285714</td>\n",
        "      <td>F2+FW2</td>\n",
+       "      <td>2.271429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -1759,6 +1783,7 @@
        "      <td>3.4</td>\n",
        "      <td>2.857143</td>\n",
        "      <td>F3+FW2</td>\n",
+       "      <td>2.142857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1766,38 +1791,40 @@
        "      <td>3.6</td>\n",
        "      <td>2.428571</td>\n",
        "      <td>F4+FW2</td>\n",
+       "      <td>2.014286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>F15</td>\n",
        "      <td>3.8</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>F5+FW2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ID  Freqs      Amps Combinations\n",
-       "0    F1    1.0  8.000000         FW_1\n",
-       "1    F2    1.2  7.571429          NaN\n",
-       "2    F3    1.4  7.142857          NaN\n",
-       "3    F4    1.6  6.714286          NaN\n",
-       "4    F5    1.8  6.285714          NaN\n",
-       "5    F6    2.0  5.857143         FW_2\n",
-       "6    F7    2.2  5.428571       F2+FW1\n",
-       "7    F8    2.4  5.000000       F3+FW1\n",
-       "8    F9    2.6  4.571429       F4+FW1\n",
-       "9   F10    2.8  4.142857       F5+FW1\n",
-       "10  F11    3.0  3.714286       F1+FW2\n",
-       "11  F12    3.2  3.285714       F2+FW2\n",
-       "12  F13    3.4  2.857143       F3+FW2\n",
-       "13  F14    3.6  2.428571       F4+FW2\n",
-       "14  F15    3.8  2.000000       F5+FW2"
+       "     ID  Freqs      Amps Combinations  Theoretical Alias_Amp\n",
+       "0    F1    1.0  8.000000         FW_1                    NaN\n",
+       "1    F2    1.2  7.571429          NaN                    NaN\n",
+       "2    F3    1.4  7.142857          NaN                    NaN\n",
+       "3    F4    1.6  6.714286          NaN                    NaN\n",
+       "4    F5    1.8  6.285714          NaN                    NaN\n",
+       "5    F6    2.0  5.857143         FW_2                    NaN\n",
+       "6    F7    2.2  5.428571       F2+FW1               3.028571\n",
+       "7    F8    2.4  5.000000       F3+FW1               2.857143\n",
+       "8    F9    2.6  4.571429       F4+FW1               2.685714\n",
+       "9   F10    2.8  4.142857       F5+FW1               2.514286\n",
+       "10  F11    3.0  3.714286       F1+FW2               2.400000\n",
+       "11  F12    3.2  3.285714       F2+FW2               2.271429\n",
+       "12  F13    3.4  2.857143       F3+FW2               2.142857\n",
+       "13  F14    3.6  2.428571       F4+FW2               2.014286\n",
+       "14  F15    3.8  2.000000          NaN                    NaN"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
