--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -1471,11 +1471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 6,
    "id": "548785fa",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "freqs_matrix = np.array([np.arange(1,4,0.2), np.linspace(8, 2, 15)]).transpose()\n",
     "window_function = np.array(\n",
     "    [[1,2, 0.5],\n",
@@ -1485,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 7,
    "id": "2e72c924",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1615,7 @@
        "14    3.8  2.000000"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1625,31 +1627,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 11,
    "id": "ad240a95",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1. , 0.4],\n",
-       "       [2. , 0.3],\n",
-       "       [0.5, 0.5]])"
-      ]
-     },
-     "execution_count": 275,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "window_function"
+    "from freq_analysis import window_check\n",
+    "antialiased = window_check(freqs=freqs_df, f_col=0, amp_col=1, window_function=window_function, max_n=1, tol=0.1)\n",
+    "real = antialiased[\"Window_Alias\"].isna()\n",
+    "real_f = antialiased[real].copy()\n",
+    "spureous = antialiased[~real].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
-   "id": "7e2e1124",
+   "execution_count": 13,
+   "id": "b3106c3a",
    "metadata": {},
    "outputs": [
     {
@@ -1673,25 +1666,25 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
+       "      <th>f_ID</th>\n",
        "      <th>Freqs</th>\n",
        "      <th>Amps</th>\n",
-       "      <th>Combinations</th>\n",
+       "      <th>Window_Alias</th>\n",
        "      <th>Theoretical Alias_Amp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>F1</td>\n",
+       "      <td>f1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>FW_1</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>F2</td>\n",
+       "      <td>f2</td>\n",
        "      <td>1.2</td>\n",
        "      <td>7.571429</td>\n",
        "      <td>NaN</td>\n",
@@ -1699,7 +1692,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>F3</td>\n",
+       "      <td>f3</td>\n",
        "      <td>1.4</td>\n",
        "      <td>7.142857</td>\n",
        "      <td>NaN</td>\n",
@@ -1707,95 +1700,95 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>F4</td>\n",
+       "      <td>f4</td>\n",
        "      <td>1.6</td>\n",
        "      <td>6.714286</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>f1+FW0</td>\n",
+       "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>F5</td>\n",
+       "      <td>f5</td>\n",
        "      <td>1.8</td>\n",
        "      <td>6.285714</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>f2+FW0</td>\n",
+       "      <td>3.785714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>F6</td>\n",
+       "      <td>f6</td>\n",
        "      <td>2.0</td>\n",
        "      <td>5.857143</td>\n",
        "      <td>FW_2</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>F7</td>\n",
+       "      <td>f7</td>\n",
        "      <td>2.2</td>\n",
        "      <td>5.428571</td>\n",
-       "      <td>F2+FW1</td>\n",
+       "      <td>f2+FW1</td>\n",
        "      <td>3.028571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>F8</td>\n",
+       "      <td>f8</td>\n",
        "      <td>2.4</td>\n",
        "      <td>5.000000</td>\n",
-       "      <td>F3+FW1</td>\n",
+       "      <td>f3+FW1</td>\n",
        "      <td>2.857143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>F9</td>\n",
+       "      <td>f9</td>\n",
        "      <td>2.6</td>\n",
        "      <td>4.571429</td>\n",
-       "      <td>F4+FW1</td>\n",
+       "      <td>f4+FW1</td>\n",
        "      <td>2.685714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>F10</td>\n",
+       "      <td>f10</td>\n",
        "      <td>2.8</td>\n",
        "      <td>4.142857</td>\n",
-       "      <td>F5+FW1</td>\n",
+       "      <td>f5+FW1</td>\n",
        "      <td>2.514286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>F11</td>\n",
+       "      <td>f11</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.714286</td>\n",
-       "      <td>F1+FW2</td>\n",
+       "      <td>f1+FW2</td>\n",
        "      <td>2.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>F12</td>\n",
+       "      <td>f12</td>\n",
        "      <td>3.2</td>\n",
        "      <td>3.285714</td>\n",
-       "      <td>F2+FW2</td>\n",
+       "      <td>f2+FW2</td>\n",
        "      <td>2.271429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>F13</td>\n",
+       "      <td>f13</td>\n",
        "      <td>3.4</td>\n",
        "      <td>2.857143</td>\n",
-       "      <td>F3+FW2</td>\n",
+       "      <td>f3+FW2</td>\n",
        "      <td>2.142857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>F14</td>\n",
+       "      <td>f14</td>\n",
        "      <td>3.6</td>\n",
        "      <td>2.428571</td>\n",
-       "      <td>F4+FW2</td>\n",
+       "      <td>f4+FW2</td>\n",
        "      <td>2.014286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>F15</td>\n",
+       "      <td>f15</td>\n",
        "      <td>3.8</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>NaN</td>\n",
@@ -1806,31 +1799,218 @@
        "</div>"
       ],
       "text/plain": [
-       "     ID  Freqs      Amps Combinations  Theoretical Alias_Amp\n",
-       "0    F1    1.0  8.000000         FW_1                    NaN\n",
-       "1    F2    1.2  7.571429          NaN                    NaN\n",
-       "2    F3    1.4  7.142857          NaN                    NaN\n",
-       "3    F4    1.6  6.714286          NaN                    NaN\n",
-       "4    F5    1.8  6.285714          NaN                    NaN\n",
-       "5    F6    2.0  5.857143         FW_2                    NaN\n",
-       "6    F7    2.2  5.428571       F2+FW1               3.028571\n",
-       "7    F8    2.4  5.000000       F3+FW1               2.857143\n",
-       "8    F9    2.6  4.571429       F4+FW1               2.685714\n",
-       "9   F10    2.8  4.142857       F5+FW1               2.514286\n",
-       "10  F11    3.0  3.714286       F1+FW2               2.400000\n",
-       "11  F12    3.2  3.285714       F2+FW2               2.271429\n",
-       "12  F13    3.4  2.857143       F3+FW2               2.142857\n",
-       "13  F14    3.6  2.428571       F4+FW2               2.014286\n",
-       "14  F15    3.8  2.000000          NaN                    NaN"
+       "   f_ID  Freqs      Amps Window_Alias  Theoretical Alias_Amp\n",
+       "0    f1    1.0  8.000000         FW_1               0.400000\n",
+       "1    f2    1.2  7.571429          NaN                    NaN\n",
+       "2    f3    1.4  7.142857          NaN                    NaN\n",
+       "3    f4    1.6  6.714286       f1+FW0               4.000000\n",
+       "4    f5    1.8  6.285714       f2+FW0               3.785714\n",
+       "5    f6    2.0  5.857143         FW_2               0.300000\n",
+       "6    f7    2.2  5.428571       f2+FW1               3.028571\n",
+       "7    f8    2.4  5.000000       f3+FW1               2.857143\n",
+       "8    f9    2.6  4.571429       f4+FW1               2.685714\n",
+       "9   f10    2.8  4.142857       f5+FW1               2.514286\n",
+       "10  f11    3.0  3.714286       f1+FW2               2.400000\n",
+       "11  f12    3.2  3.285714       f2+FW2               2.271429\n",
+       "12  f13    3.4  2.857143       f3+FW2               2.142857\n",
+       "13  f14    3.6  2.428571       f4+FW2               2.014286\n",
+       "14  f15    3.8  2.000000          NaN                    NaN"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "window_check(freqs=freqs_df, f_col=0, amp_col=1, window_function=window_function, max_n=1, tol=0.01)"
+    "antialiased"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e586802a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_ID</th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "      <th>Window_Alias</th>\n",
+       "      <th>Theoretical Alias_Amp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>f1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>FW_1</td>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>f2</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>7.571429</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>f3</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>7.142857</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>f4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>6.714286</td>\n",
+       "      <td>f1+FW0</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>f5</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>6.285714</td>\n",
+       "      <td>f2+FW0</td>\n",
+       "      <td>3.785714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>f6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.857143</td>\n",
+       "      <td>FW_2</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>f7</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>5.428571</td>\n",
+       "      <td>f2+FW1</td>\n",
+       "      <td>3.028571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>f8</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>f3+FW1</td>\n",
+       "      <td>2.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>f9</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.571429</td>\n",
+       "      <td>f4+FW1</td>\n",
+       "      <td>2.685714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>f10</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>4.142857</td>\n",
+       "      <td>f5+FW1</td>\n",
+       "      <td>2.514286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>f11</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.714286</td>\n",
+       "      <td>f1+FW2</td>\n",
+       "      <td>2.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>f12</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>3.285714</td>\n",
+       "      <td>f2+FW2</td>\n",
+       "      <td>2.271429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>f13</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>2.857143</td>\n",
+       "      <td>f3+FW2</td>\n",
+       "      <td>2.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>f14</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2.428571</td>\n",
+       "      <td>f4+FW2</td>\n",
+       "      <td>2.014286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>f15</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   f_ID  Freqs      Amps Window_Alias  Theoretical Alias_Amp\n",
+       "0    f1    1.0  8.000000         FW_1               0.400000\n",
+       "1    f2    1.2  7.571429          NaN                    NaN\n",
+       "2    f3    1.4  7.142857          NaN                    NaN\n",
+       "3    f4    1.6  6.714286       f1+FW0               4.000000\n",
+       "4    f5    1.8  6.285714       f2+FW0               3.785714\n",
+       "5    f6    2.0  5.857143         FW_2               0.300000\n",
+       "6    f7    2.2  5.428571       f2+FW1               3.028571\n",
+       "7    f8    2.4  5.000000       f3+FW1               2.857143\n",
+       "8    f9    2.6  4.571429       f4+FW1               2.685714\n",
+       "9   f10    2.8  4.142857       f5+FW1               2.514286\n",
+       "10  f11    3.0  3.714286       f1+FW2               2.400000\n",
+       "11  f12    3.2  3.285714       f2+FW2               2.271429\n",
+       "12  f13    3.4  2.857143       f3+FW2               2.142857\n",
+       "13  f14    3.6  2.428571       f4+FW2               2.014286\n",
+       "14  f15    3.8  2.000000          NaN                    NaN"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([real_f, spureous]).sort_index()"
    ]
   },
   {
@@ -1844,7 +2024,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".stellar_env",
+   "display_name": ".stellar_env (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -1858,7 +2038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
