--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "44efd2fc",
    "metadata": {},
    "outputs": [],
@@ -228,74 +228,144 @@
     "    n_independent: int,\n",
     "    tol: float\n",
     ") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Identify independent frequencies and detect harmonic, subharmonic,\n",
+    "    and linear combinations with strict amplitude precedence.\n",
+    "\n",
+    "    Frequencies are first sorted by descending amplitude and assigned\n",
+    "    unique IDs (F1 = highest amplitude). The algorithm proceeds in two\n",
+    "    stages:\n",
+    "\n",
+    "    1. Initial independent seed:\n",
+    "       The first `n_independent` frequencies (by amplitude) are taken as\n",
+    "       a candidate independent set. Any frequency within this set that\n",
+    "       can be explained as a harmonic, subharmonic, or linear combination\n",
+    "       of higher-amplitude frequencies is removed from the independent\n",
+    "       set.\n",
+    "\n",
+    "    2. Downward sweep:\n",
+    "       Remaining frequencies are processed in descending amplitude\n",
+    "       order. Each frequency is tested against the current independent\n",
+    "       set:\n",
+    "         - If it can be explained, the corresponding relation is stored.\n",
+    "         - If it cannot be explained, it is promoted to an independent\n",
+    "           frequency and added to the set, becoming available to explain\n",
+    "           lower-amplitude frequencies.\n",
+    "\n",
+    "    At all times, a frequency may only depend on frequencies with\n",
+    "    strictly higher amplitude, ensuring a directed and acyclic\n",
+    "    dependency structure.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pandas.DataFrame\n",
+    "        Input DataFrame containing frequency and amplitude data.\n",
+    "    freq_col : int\n",
+    "        Index of the column containing frequencies (Hz).\n",
+    "    amp_col : int\n",
+    "        Index of the column containing amplitudes.\n",
+    "    harmonic_order : int\n",
+    "        Maximum order for harmonics and subharmonics.\n",
+    "    n_independent : int\n",
+    "        Number of initial independent frequencies used as a seed.\n",
+    "    tol : float\n",
+    "        Absolute tolerance (Hz) used for frequency matching.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pandas.DataFrame\n",
+    "        Copy of the input DataFrame with two additional columns:\n",
+    "        - 'ID': unique identifier ordered by amplitude (F1, F2, ...)\n",
+    "        - 'linear_combination': detected relation or 'independent'\n",
+    "\n",
+    "    Notes\n",
+    "    -----\n",
+    "    - Equal-frequency matches always favor the higher-amplitude component.\n",
+    "    - Independent frequencies may grow beyond `n_independent`.\n",
+    "    - The implementation prioritizes physical consistency and clarity.\n",
+    "    \"\"\"\n",
     "\n",
     "    out = df.copy()\n",
     "    n = len(out)\n",
-    "    n_independent = min(n_independent, n)\n",
     "\n",
     "    freqs = out.iloc[:, freq_col].to_numpy(float)\n",
     "    amps = out.iloc[:, amp_col].to_numpy(float)\n",
     "\n",
     "    # --------------------------------------------------\n",
-    "    # Sort by amplitude (descending)\n",
+    "    # Sort by amplitude (descending) and assign IDs\n",
     "    # --------------------------------------------------\n",
     "    order = np.argsort(-amps)\n",
     "    freqs_sorted = freqs[order]\n",
     "\n",
-    "    # --------------------------------------------------\n",
-    "    # Assign IDs following amplitude order\n",
-    "    # --------------------------------------------------\n",
     "    IDs_sorted = np.array([f\"F{i+1}\" for i in range(n)], dtype=object)\n",
     "    IDs = np.empty(n, dtype=object)\n",
     "    IDs[order] = IDs_sorted\n",
     "\n",
     "    # --------------------------------------------------\n",
-    "    # Harmonic coefficients ±n (excluding zero)\n",
+    "    # Harmonic coefficients (±n, excluding zero)\n",
     "    # --------------------------------------------------\n",
     "    coeffs = np.r_[np.arange(-harmonic_order, 0),\n",
     "                   np.arange(1, harmonic_order + 1)]\n",
     "\n",
-    "    # Precompute binary coefficient grid\n",
+    "    # Binary coefficient grid\n",
     "    n1, n2 = np.meshgrid(coeffs, coeffs, indexing=\"ij\")\n",
     "\n",
-    "    independent_freqs = []\n",
-    "    independent_ids = []\n",
+    "    # --------------------------------------------------\n",
+    "    # Helper: check linear explainability\n",
+    "    # --------------------------------------------------\n",
+    "    def explain_frequency(f, base_freqs, base_ids):\n",
+    "        \"\"\"\n",
+    "        Try to explain frequency f using base frequencies.\n",
+    "        Returns a string if explained, otherwise None.\n",
+    "        \"\"\"\n",
     "\n",
-    "    # --------------------------------------------------\n",
-    "    # Linear-combination check with amplitude precedence\n",
-    "    # --------------------------------------------------\n",
-    "    def is_linear_combination(f, base_freqs):\n",
     "        base_freqs = np.asarray(base_freqs)\n",
     "\n",
     "        # Harmonics\n",
-    "        if np.any(np.isclose(coeffs[:, None] * base_freqs, f, atol=tol)):\n",
-    "            return True\n",
+    "        prod = coeffs[:, None] * base_freqs\n",
+    "        hit = np.isclose(prod, f, atol=tol)\n",
+    "        if hit.any():\n",
+    "            a, b = np.argwhere(hit)[0]\n",
+    "            return f\"{coeffs[a]}·{base_ids[b]}\"\n",
     "\n",
-    "        # Subharmonics (1/n)\n",
-    "        for n in range(2, harmonic_order + 1):\n",
-    "            if np.any(np.isclose(base_freqs / n, f, atol=tol)):\n",
-    "                return True\n",
+    "        # Subharmonics\n",
+    "        for j, bf in enumerate(base_freqs):\n",
+    "            for n in range(2, harmonic_order + 1):\n",
+    "                if np.isclose(bf / n, f, atol=tol):\n",
+    "                    return f\"1/{n}·{base_ids[j]}\"\n",
     "\n",
     "        # Binary combinations\n",
-    "        for i in range(len(base_freqs)):\n",
-    "            for j in range(i + 1, len(base_freqs)):\n",
-    "                comb = n1 * base_freqs[i] + n2 * base_freqs[j]\n",
-    "                if np.any(np.isclose(comb, f, atol=tol)):\n",
-    "                    return True\n",
+    "        for j in range(len(base_freqs)):\n",
+    "            for k in range(j + 1, len(base_freqs)):\n",
+    "                comb = n1 * base_freqs[j] + n2 * base_freqs[k]\n",
+    "                hit = np.isclose(comb, f, atol=tol)\n",
+    "                if hit.any():\n",
+    "                    a, b = np.argwhere(hit)[0]\n",
+    "                    c1, c2 = coeffs[a], coeffs[b]\n",
+    "                    sign = \"+\" if c2 > 0 else \"\"\n",
+    "                    return (\n",
+    "                        f\"{c1}·{base_ids[j]}\"\n",
+    "                        f\"{sign}{c2}·{base_ids[k]}\"\n",
+    "                    )\n",
     "\n",
-    "        return False\n",
+    "        return None\n",
     "\n",
     "    # --------------------------------------------------\n",
-    "    # Independent frequency selection\n",
+    "    # Initial independent seed (amplitude-based)\n",
     "    # --------------------------------------------------\n",
-    "    for idx_sorted, f in zip(order, freqs_sorted):\n",
-    "        if len(independent_freqs) == n_independent:\n",
-    "            break\n",
-    "        if not independent_freqs or not is_linear_combination(f, independent_freqs):\n",
+    "    independent_freqs = []\n",
+    "    independent_ids = []\n",
+    "\n",
+    "    for idx in order[:min(n_independent, n)]:\n",
+    "        f = freqs[idx]\n",
+    "        explanation = explain_frequency(\n",
+    "            f,\n",
+    "            independent_freqs,\n",
+    "            independent_ids\n",
+    "        )\n",
+    "        if explanation is None:\n",
     "            independent_freqs.append(f)\n",
-    "            independent_ids.append(IDs[idx_sorted])\n",
-    "\n",
-    "    independent_freqs = np.asarray(independent_freqs)\n",
+    "            independent_ids.append(IDs[idx])\n",
     "\n",
     "    # --------------------------------------------------\n",
     "    # Linear combination column\n",
@@ -306,59 +376,30 @@
     "        lin_comb[np.where(IDs == fid)[0][0]] = \"independent\"\n",
     "\n",
     "    # --------------------------------------------------\n",
-    "    # Analyze dependent frequencies (precedence enforced)\n",
+    "    # Downward sweep for remaining frequencies\n",
     "    # --------------------------------------------------\n",
-    "    for i_sorted, idx in enumerate(order):\n",
+    "    for idx in order:\n",
     "        if lin_comb[idx]:\n",
     "            continue\n",
     "\n",
     "        f = freqs[idx]\n",
     "\n",
-    "        # Only higher-amplitude independent frequencies are allowed\n",
-    "        valid_freqs = independent_freqs[:i_sorted]\n",
-    "        valid_ids = independent_ids[:i_sorted]\n",
+    "        explanation = explain_frequency(\n",
+    "            f,\n",
+    "            independent_freqs,\n",
+    "            independent_ids\n",
+    "        )\n",
     "\n",
-    "        if len(valid_freqs) == 0:\n",
-    "            continue\n",
-    "\n",
-    "        # Harmonics\n",
-    "        prod = coeffs[:, None] * valid_freqs\n",
-    "        hit = np.isclose(prod, f, atol=tol)\n",
-    "        if hit.any():\n",
-    "            a, b = np.argwhere(hit)[0]\n",
-    "            lin_comb[idx] = f\"{coeffs[a]}·{valid_ids[b]}\"\n",
-    "            continue\n",
-    "\n",
-    "        # Subharmonics\n",
-    "        for j, bf in enumerate(valid_freqs):\n",
-    "            for n in range(2, harmonic_order + 1):\n",
-    "                if np.isclose(bf / n, f, atol=tol):\n",
-    "                    lin_comb[idx] = f\"1/{n}·{valid_ids[j]}\"\n",
-    "                    break\n",
-    "            if lin_comb[idx]:\n",
-    "                break\n",
-    "        if lin_comb[idx]:\n",
-    "            continue\n",
-    "\n",
-    "        # Binary combinations\n",
-    "        for j in range(len(valid_freqs)):\n",
-    "            for k in range(j + 1, len(valid_freqs)):\n",
-    "                comb = n1 * valid_freqs[j] + n2 * valid_freqs[k]\n",
-    "                hit = np.isclose(comb, f, atol=tol)\n",
-    "                if hit.any():\n",
-    "                    a, b = np.argwhere(hit)[0]\n",
-    "                    c1, c2 = coeffs[a], coeffs[b]\n",
-    "                    sign = \"+\" if c2 > 0 else \"\"\n",
-    "                    lin_comb[idx] = (\n",
-    "                        f\"{c1}·{valid_ids[j]}\"\n",
-    "                        f\"{sign}{c2}·{valid_ids[k]}\"\n",
-    "                    )\n",
-    "                    break\n",
-    "            if lin_comb[idx]:\n",
-    "                break\n",
+    "        if explanation is None:\n",
+    "            # Promote to independent\n",
+    "            independent_freqs.append(f)\n",
+    "            independent_ids.append(IDs[idx])\n",
+    "            lin_comb[idx] = \"independent\"\n",
+    "        else:\n",
+    "            lin_comb[idx] = explanation\n",
     "\n",
     "    # --------------------------------------------------\n",
-    "    # Build final DataFrame\n",
+    "    # Final DataFrame\n",
     "    # --------------------------------------------------\n",
     "    out.insert(0, \"ID\", IDs)\n",
     "    out[\"linear_combination\"] = lin_comb\n",
@@ -368,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "742a98ed",
    "metadata": {},
    "outputs": [
@@ -682,7 +723,7 @@
        "[93 rows x 16 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,8 +738,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "ecec3208",
+   "execution_count": 5,
+   "id": "8daeb13f",
    "metadata": {},
    "outputs": [
     {
@@ -1035,20 +1076,20 @@
        "[93 rows x 18 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = harmonics(df=freqs_df_copy, freq_col=6, amp_col=7, harmonic_order=5, n_independent=100, tol=0.0185185/2)\n",
+    "test = harmonics(df=freqs_df_copy, freq_col=6, amp_col=7, harmonic_order=5, n_independent=10, tol=0.0185185/2)\n",
     "test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "35ac9ac0",
+   "execution_count": 6,
+   "id": "6bf54378",
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1548,7 @@
        "115    6749.404493          NaN                    NaN        independent  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "689ec73e",
    "metadata": {},
    "outputs": [
@@ -1529,7 +1570,7 @@
        "np.float64(1.8106477147637667)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3623,7 +3664,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".stellar_env",
+   "display_name": ".stellar_env (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -3637,7 +3678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
